240927 1903 극장 지도 api 활용 등록 기능 및 삭제 기능 완성

--- a/src/main/resources/templates/admin/movie/register.html
+++ b/src/main/resources/templates/admin/movie/register.html
@@ -58,6 +58,8 @@
 </div>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script>
+    document.onreadystatechange
+
     document.querySelector('#movieRegisterForm').addEventListener('submit', async (event) => {
         event.preventDefault(); // 폼이 기본적으로 전송되지 않도록 방지
 
