--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -22,9 +22,9 @@
                     </a>
                     <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                         <nav class="sb-sidenav-menu-nested nav">
-                            <a class="nav-link" th:href="@{/api/admin/layout-static}">Movie</a>
+                            <a class="nav-link" th:href="@{/api/movie}">Movie</a>
                             <a class="nav-link" th:href="@{/api/admin/layout-sidenav-light}">Light Sidenav</a>
-                            <a class="nav-link" th:href="@{/api/admin/theater/layout-static}">Theater</a>
+                            <a class="nav-link" th:href="@{/api/theater}">Theater</a>
                             <a class="nav-link" th:href="@{/api/movie/update}">영화정보 수정하기</a>
                         </nav>
                     </div>
