--- a/src/main/resources/templates/admin/movie/list.html
+++ b/src/main/resources/templates/admin/movie/list.html
@@ -68,7 +68,7 @@
                         <nav class="sb-sidenav-menu-nested nav">
                             <a class="nav-link" th:href="@{/api/admin/layout-static}">Movie</a>
                             <a class="nav-link" th:href="@{/api/admin/layout-sidenav-light}">Light Sidenav</a>
-                            <a class="nav-link" th:href="@{/api/admin/movie/register}">영화정보 등록하기</a>
+                            <a class="nav-link" th:href="@{/api/movie/register}">영화정보 등록하기</a>
                             <a class="nav-link" th:href="@{/api/movie/update}">영화정보 수정하기</a>
                         </nav>
                     </div>
@@ -267,7 +267,7 @@
 
                             if (checkedRows.length > 0 && confirm('정말 삭제하시겠습니까?')) {
                                 // 선택된 movieId 리스트를 서버로 전송
-                                axios.post(`/api/movie/delete`, checkedRows)
+                                axios.post(`/api/movie/deleteMany`, checkedRows)
                                     .then(res => {
                                         if (res.data !== 0) {
                                             alert('영화 정보 삭제 성공!');
