--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -71,18 +71,17 @@
                     <li data-target="#headerslider" data-slide-to="2"></li>
                 </ol>
                 <div class="carousel-inner" role="listbox" >
-                    <div class="item active" th:each="movie: ${movies}">
+                    <div class="item active" th:each="movie: ${movies}" >
                         <div class="fill"  th:data-bg-image="${movie.posterUrl}">
                             <div class="bs-slider-overlay"></div>
-                            <div class="container movie-slider-container" >
+                            <div class="container movie-slider-container">
                                 <div class="row">
                                     <div class="col-sm-12 movie-slider-content">
                                         <div class="slider-content">
-                                            <ul class="subtitle" th:data-animation="${movie.genre}">
-                                                <li th:text="${movie.genre}"> </li>
-                                                <li>Science Fiction</li>
-                                                <li>Adventure</li>
+                                            <ul class="subtitle"  data-animation="animated bounceInRight">
+                                                <li th:text="${genre}">Genre</li>
                                             </ul>
+
                                             <div th:text="${movie.title}" class="title" data-animation="animated bounceInRight"><i>(2017)</i></div>
                                             <div class="slide_right" data-animation="animated bounceInRight">
                                                 <a href="javascript:;" class="btn-trailer">watch trailer</a> <a
@@ -99,13 +98,13 @@
                                                     <div class="circle-chart" data-circle-width="7" data-percent="64"
                                                         th:data-text="${movie.rate}">
                                                     </div>
-                                                    <span> RATE </span>
+                                                    <span>RATING</span>
                                                 </div>
                                                 <div class="chart-circle-r" data-animation="animated bounceInUp">
                                                     <div class="circle-chart" data-circle-width="7" data-percent="84"
-                                                        data-text="8.4">
+                                                         th:data-text="${movie.booking}">
                                                     </div>
-                                                    <span>Rotten Rating</span>
+                                                    <span>Ticket Rate</span>
                                                 </div>
                                             </div>
                                         </div>
@@ -114,20 +113,19 @@
                             </div>
                         </div>
                     </div>
-                    <div class="item">
-                        <div class="fill" th:data-bg-image="@{images/product/feature-item.jpg}">
+                    <div class="item" th:each="movie: ${movies}">
+                        <div class="fill" th:data-bg-image="${movie.posterUrl}">
                             <div class="bs-slider-overlay"></div>
                             <div class="container movie-slider-container">
                                 <div class="row">
                                     <div class="col-sm-12 movie-slider-content">
                                         <div class="slider-content">
-                                            <ul class="subtitle" data-animation="animated bounceInRight">
-                                                <li>Action</li>
-                                                <li>Science Fiction</li>
-                                                <li>Adventure</li>
+                                            <ul class="subtitle"  data-animation="animated bounceInRight">
+                                                <li th:text="${genre}">Genre</li>
+                                                <li th:text="${genre}">Genre</li>
+                                                <li th:text="${genre}">Genre</li>
                                             </ul>
-                                            <div class="title" data-animation="animated bounceInRight">The Battle of
-                                                Algiers (La Battaglia) <i>(1967)</i></div>
+                                            <div class="title" data-animation="animated bounceInRight" th:text="${movie.title}"> <i>(1967)</i></div>
                                             <div class="slide_right" data-animation="animated bounceInRight">
                                                 <a href="javascript:;" class="btn-trailer">watch trailer</a> <a
                                                     href="javascript:;" class="btn-ticket">buy ticket</a>
@@ -141,15 +139,15 @@
                                             <div class="chart-cirle">
                                                 <div class="chart-circle-l" data-animation="animated bounceInUp">
                                                     <div class="circle-chart" data-circle-width="7" data-percent="94"
-                                                        data-text="9.4">
+                                                         th:data-text="${movie.rate}">
                                                     </div>
-                                                    <span>IMDB Ratffing</span>
+                                                    <span>RATING</span>
                                                 </div>
                                                 <div class="chart-circle-r" data-animation="animated bounceInUp">
                                                     <div class="circle-chart" data-circle-width="7" data-percent="84"
-                                                        data-text="8.4">
+                                                         th:data-text="${movie.booking}">
                                                     </div>
-                                                    <span>Rotten Rating</span>
+                                                    <span>Ticket Rate</span>
                                                 </div>
                                             </div>
                                         </div>
@@ -158,19 +156,18 @@
                             </div>
                         </div>
                     </div>
-                    <div class="item">
-                        <div class="fill" th:data-bg-image="@{images/header/header.png}">
+                    <div class="item" th:each="movie: ${movies}">
+                        <div class="fill" th:data-bg-image="${movie.posterUrl}">
                             <div class="bs-slider-overlay"></div>
                             <div class="container movie-slider-container">
                                 <div class="row">
                                     <div class="col-sm-12 movie-slider-content">
                                         <div class="slider-content">
-                                            <ul class="subtitle" data-animation="animated bounceInRight">
-                                                <li>Action</li>
-                                                <li>Science Fiction</li>
+                                            <ul class="subtitle"  data-animation="animated bounceInRight">
+                                                <li th:text="${genre}">Genre</li>
                                             </ul>
-                                            <div class="title" data-animation="animated bounceInRight">The Battle of
-                                                Algiers (Di Algeri)<i>(1967)</i></div>
+                                            <div class="title" data-animation="animated bounceInRight" th:text="${movie.title}">
+                                              <i>(1967)</i></div>
                                             <div class="slide_right" data-animation="animated bounceInRight">
                                                 <a href="javascript:;" class="btn-trailer">watch trailer</a> <a
                                                     href="javascript:;" class="btn-ticket">buy ticket</a>
@@ -184,15 +181,15 @@
                                             <div class="chart-cirle" data-animation="animated bounceInUp">
                                                 <div class="chart-circle-l" data-animation="animated bounceInUp">
                                                     <div class="circle-chart" data-circle-width="7" data-percent="86"
-                                                        data-text="8.6">
+                                                         th:data-text="${movie.rate}">
                                                     </div>
-                                                    <span>IMDB Ratffing</span>
+                                                    <span>Rating</span>
                                                 </div>
                                                 <div class="chart-circle-r" data-animation="animated bounceInUp">
                                                     <div class="circle-chart" data-circle-width="7" data-percent="74"
-                                                        data-text="7.4">
+                                                         th:data-text="${movie.booking}">
                                                     </div>
-                                                    <span>Rotten Rating</span>
+                                                    <span>Ticket Rate</span>
                                                 </div>
                                             </div>
                                         </div>
@@ -200,7 +197,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>-->
+                    </div>
                     <a class="carousel-control left" href="#headerslider" data-slide="prev">
                         <i class="fa fa-angle-left"></i>
                     </a>
@@ -213,18 +210,16 @@
 
             </div>
         </div>
-
-
         <section class="section-content">
             <div class="container-fluid pv11 ">
                 <div class="row">
                     <div class="col-sm-12">
                         <h3 class="heading text-center">Now playing</h3>
-                        <div class="ticket-carousel pvt85">
+                        <div class="ticket-carousel pvt85" >
                             <div class="swiper-container carousel-container movie-images" data-col="5">
-                                <div class="swiper-wrapper">
-                                    <div class="swiper-slide">
-                                        <div class="movie-image" th:data-bg-image="@{images/carousel/movie-1.jpg}">
+                                <div class="swiper-wrapper" >
+                                    <div class="swiper-slide" th:each="poster: ${posters}">
+                                        <div class="movie-image" th:data-bg-image="${poster.url}">
                                             <div class="entry-hover">
                                                 <div class="entry-actions">
                                                     <a href="https://vimeo.com/28177848"
@@ -245,13 +240,6 @@
                                                     <input name="stars" type="radio">
                                                     <label>☆</label>
                                                 </div>
-                                                <h3 class="entry-title">X-Men:Apocalypse</h3>
-                                                <ul class="entry-date">
-                                                    <li>11 :00</li>
-                                                    <li>13 :50</li>
-                                                    <li>14 :00</li>
-                                                    <li>18 :00</li>
-                                                </ul>
                                             </div>
                                         </div>
                                     </div>
@@ -287,6 +275,7 @@
                                             </div>
                                         </div>
                                     </div>
+
                                     <div class="swiper-slide">
                                         <div class="movie-image" th:data-bg-image="@{images/carousel/movie-3.jpg}">
                                             <div class="entry-hover">
@@ -472,7 +461,7 @@
                     <div class="row">
                         <div class="col-sm-7 col-xs-12">
                             <h3>box office</h3>
-                            <ul class="wpc-box-list">
+                            <ul class="wpc-box-list" th:each="chart: ${chart}">
                                 <li class="wpc-box-item">
                                     <ol>
                                         <li class="bx-item-t"><img th:src="@{images/boxoffice/thumb-1.jpg}" alt="thumb"></li>
