--- a/src/main/resources/templates/admin/movie/list.html
+++ b/src/main/resources/templates/admin/movie/list.html
@@ -66,10 +66,10 @@
                     </a>
                     <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                         <nav class="sb-sidenav-menu-nested nav">
-                            <a class="nav-link" th:href="@{/api/admin/layout-static}">Movie</a>
+                            <a class="nav-link" th:href="@{/api/admin/movie}">Movie</a>
                             <a class="nav-link" th:href="@{/api/admin/layout-sidenav-light}">Light Sidenav</a>
+                            <a class="nav-link" th:href="@{/api/theater}">Theater</a>
                             <a class="nav-link" th:href="@{/api/movie/register}">영화정보 등록하기</a>
-                            <a class="nav-link" th:href="@{/api/movie/update}">영화정보 수정하기</a>
                         </nav>
                     </div>
                     <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
@@ -139,6 +139,7 @@
 
                 <!-- Button and response area -->
                 <div>
+                    <button type="button" class="register-btn" id="register-btn" th:onclick="|location.href='@{/api/movie/register}'|">Register</button>
                     <button class="save-btn" id="save-btn">Save</button>
                     <button class="delete-btn" id="delete-btn">Delete</button>
 
@@ -231,9 +232,7 @@
                                 };
                             });
 
-                            console.log(movieData);
-
-                            console.log("확인용:" +data)
+                            console.log("확인용:" +  movieData);
                             axios.post('/api/movie/update', movieData)
                                 .then(res => {
                                     console.log(res);
